Update Policy Monitor Handling (#162)
* Add clone monitor functionality

* Handle new monitor policy

* add handleMonitorPolicyEvent tests

* Remove PolicyMonitorUpdateEvent parts

* Don't allow deletion of monitor with policy

* cleanup and test tweaks

* restrict cloning of policy monitors

* update javadoc

* update javadoc

* fix up tenant change tests

* removed unused methods

* import cleanup

* don't exclude metadata for policy monitors

* pr review